--- a/MVVM_Implementacion_HACB_V2/Vista/pagina1.xaml
+++ b/MVVM_Implementacion_HACB_V2/Vista/pagina1.xaml
@@ -2,12 +2,23 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MVVM_Implementacion_HACB_V2.Vista.Page1">
+    <Grid BackgroundColor="Aqua">
+        <StackLayout VerticalOptions="Center">
+            <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+                <Label Text="1#:" TextColor="White" FontAttributes="Bold" VerticalOptions="Center"/>
+                <Entry PlaceholderColor="White" Placeholder="Escriba un número" HorizontalOptions="StartAndExpand" Text="{Binding N1}" Keyboard="Numeric"/>
+            </StackLayout>
+            <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+                <Label Text="#2:" TextColor="White" FontAttributes="Bold" VerticalOptions="Center"/>
+                <Entry PlaceholderColor="White" Placeholder="Escriba un número" HorizontalOptions="StartAndExpand" Text="{Binding N2}" Keyboard="Numeric"/>
+            </StackLayout>
+            <Button Text="Sumar"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"
+            Command="{Binding Sumarcommand}" TextTransform="None" BackgroundColor="White" FontAttributes="Bold" CornerRadius="5" TextColor="Black"/>
+            <Label Text="{Binding R}" TextColor="White" HorizontalOptions="Center" FontAttributes="Bold" FontSize="35"/>
 
-    <StackLayout>
-        <Button Text="Guardar"
-                VerticalOptions="Center"
-                HorizontalOptions="Center"
-                Command="{Binding Alertacommand}"/>
-        
-    </StackLayout>
+        </StackLayout>
+    </Grid>
+    
 </ContentPage>
