--- a/MVVM_Implementacion_HACB_V2/Vista/Page2.xaml
+++ b/MVVM_Implementacion_HACB_V2/Vista/Page2.xaml
@@ -1,8 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MVVM_Implementacion_HACB_V2.Vista.Page2">
+             x:Class="MVVM_Implementacion_HACB_V2.Vista.Page2"
+             NavigationPage.HasNavigationBar="False">
     <Grid>
+        <Image Source="flecha.png" VerticalOptions="Start" HeightRequest="50" HorizontalOptions="Start" Margin="10">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding Volvercommand}"/>
+            </Image.GestureRecognizers>
+        </Image>
+
         <CollectionView ItemsSource="{Binding listausuarios}" VerticalOptions="Center" Margin="20,60,20,0">
             <CollectionView.ItemsLayout>
                 <GridItemsLayout Orientation="Vertical" Span="1" VerticalItemSpacing="20"/>
