--- a/MVVM_Implementacion_HACB_V2/Vista/pagina1.xaml
+++ b/MVVM_Implementacion_HACB_V2/Vista/pagina1.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MVVM_Implementacion_HACB_V2.Vista.Page1">
+             x:Class="MVVM_Implementacion_HACB_V2.Vista.Page1"
+             NavigationPage.HasNavigationBar="False">
     <Grid BackgroundColor="Aqua">
         <StackLayout VerticalOptions="Center">
             <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
@@ -17,7 +18,7 @@
             HorizontalOptions="Center"
             Command="{Binding Sumarcommand}" TextTransform="None" BackgroundColor="White" FontAttributes="Bold" CornerRadius="5" TextColor="Black"/>
             <Label Text="{Binding R}" TextColor="White" HorizontalOptions="Center" FontAttributes="Bold" FontSize="35"/>
-            <Button Text="Ir a página 2" VerticalOptions="Center" HorizontalOptions="Center" TextTransform="None" BackgroundColor="White" FontAttributes="Bold" CornerRadius="5" TextColor="Black"/>
+            <Button Text="Ir a página 2" VerticalOptions="Center" HorizontalOptions="Center" TextTransform="None" BackgroundColor="White" FontAttributes="Bold" CornerRadius="5" TextColor="Black" Command="{Binding Navegarpagina2command}"/>
             <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
                 <Label TextColor="White" FontAttributes="Bold" Text="Picker: " VerticalOptions="Center"/>
                 <Picker HorizontalOptions="FillAndExpand" Title="Selecciones una opción" SelectedItem="{Binding SeleccionarTipoUsuario}">
@@ -28,7 +29,6 @@
                         </x:Array>
                     </Picker.ItemsSource>
                 </Picker>
-
             </StackLayout>
 
         </StackLayout>
