--- a/MVVM_Implementacion_HACB_V2/Vista/Menuprincipal.xaml
+++ b/MVVM_Implementacion_HACB_V2/Vista/Menuprincipal.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MVVM_Implementacion_HACB_V2.Vista.Page2"
-             NavigationPage.HasNavigationBar="False">
+             x:Class="MVVM_Implementacion_HACB_V2.Vista.Menuprincipal">
+
     <Grid>
         <Image Source="flecha.png" VerticalOptions="Start" HeightRequest="50" HorizontalOptions="Start" Margin="10">
             <Image.GestureRecognizers>
@@ -13,7 +13,7 @@
         <CollectionView ItemsSource="{Binding listausuarios}" VerticalOptions="Center" Margin="20,60,20,0" x:Name="listauser">
             <CollectionView.ItemsLayout>
                 <GridItemsLayout Orientation="Vertical" Span="1" VerticalItemSpacing="20"/>
-                
+
             </CollectionView.ItemsLayout>
             <CollectionView.ItemTemplate>
                 <DataTemplate>
@@ -29,5 +29,5 @@
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-    </Grid> 
+    </Grid>
 </ContentPage>
